# qt-dbus-example

./: CMakeLists.txt  README.md
clientSrc/: CMakeLists.txt  Main.qml  ShopController.cpp  ShopController.h  ShopInterface.cpp  ShopInterface.h  main.cpp
common/: CMakeLists.txt  Shop.xml
common/datasets/: Product.cpp  Product.h
serviceSrc/: CMakeLists.txt  Shop.cpp  Shop.h  ShopAdaptor.cpp  ShopAdaptor.h  serviceMain.cpp
